@@ -36,7 +36,7 @@ public class ListServices {
      */
     public static void main(String[] args) {
         /* Activate these lines to see log messages of JmDNS
-        Logger logger = Logger.getLogger(JmDNS.class.toString());
+        Logger logger = Logger.getLogger(JmDNS.class.getName());
         ConsoleHandler handler = new ConsoleHandler();
         logger.addHandler(handler);
         logger.setLevel(Level.FINER);
